wingfoil-next/tests/trybuild/unknown_combinator.stderr
error: unknown combinator `.frobnicate(..)`; expected one of: map, map_n, fan, filter, fold, sample, merge, join, delay, count, accumulate, ewma, ewma_per_tick, ewma_half_life, rolling_sum, rolling_mean, distinct, difference, limit, inspect, map_filter, with_time, ticked_at, ticked_at_elapsed
 --> tests/trybuild/unknown_combinator.rs:7:62
  |
7 |         let out = g.ticker(Duration::from_nanos(10)).count().frobnicate();
  |                                                              ^^^^^^^^^^
