wingfoil-next/tests/trybuild/unknown_combinator.rs
#![allow(unused)]
use std::time::Duration;
use wingfoil_next::prelude::*;

wingfoil_next::graph! {
    fn bad(g: &GraphBuilder) -> Stream<u64> {
        let out = g.ticker(Duration::from_nanos(10)).count().frobnicate();
        out
    }
}

fn main() {}
